[package]
name = "export"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
export_macro = { path = "../export_macro" }
syn = "1.0.17"
proc-macro2 = "1.0.9"
